# ielts-band-predictor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: eval_random.yaml  export_onnx.yaml  infer.yaml  train.yaml
configs/callback_early_stop/: early_stop.yaml
configs/callback_lr_monitor/: lr_monitor.yaml
configs/cleaning/: default.yaml
configs/datamodule/: default.yaml
configs/logger/: mlflow.yaml
configs/model/: bert_reg.yaml  deberta_reg.yaml  longformer_reg.yaml  t5_small_reg.yaml
data/raw/: .gitignore  essays.jsonl.dvc
ielts_band_predictor/: data.py  models.py
ielts_band_predictor/scripts/: client_test.py  config.py  eval_random.py  export_onnx.py  export_trt.sh  prepare_triton.py  remove_nonascii.py  train.py
triton_inference_server/: Dockerfile  docker-compose.yaml
triton_inference_server/triton_models/bert/: config.pbtxt
triton_inference_server/triton_models/ielts_pipeline/: config.pbtxt
triton_inference_server/triton_models/tokenizer/: config.pbtxt  requirements.txt
triton_inference_server/triton_models/tokenizer/1/: model.py
