[project]
name = "ielts-band-predictor"
version = "0.1.0"
description = "Predicting IELTS band of the 2nd essay"
authors = [
    {name = "Alexander Shekhovtsov"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dvc (>=3.59.2,<4.0.0)",
    "dvc-gdrive (>=3.0.1,<4.0.0)",
    "dvc-s3 (>=3.2.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "torchmetrics (>=1.7.2,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "onnx (>=1.18.0,<2.0.0)",
    "onnxsim (>=0.4.36,<0.5.0)",
    "nvidia-tensorrt (>=99.0.0,<100.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "npm (>=0.1.1,<0.2.0)",
    "nodejs (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
known_first_party = ["ielts_band_predictor"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
# баг-bear & builtins уже добавили выше
select = ["E", "W", "B", "F", "B9"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
flake8-builtins = "^2.5.0"
pre-commit = "^4.2.0"
